# advent

./: .gitignore  Main.hs  README.md  advent.cabal  advent.prof  eight.hs  eleven.hs  five.hs  package.yaml  six.hs  stack.yaml  two.hs
2021/: Main.hs  package.yaml
2021/src/: Seventeen.hs  TwentyFour.hs  TwentyTwoBis.hs  Twentyone.hs
av2021/: advent.cabal
av2021/data/: m.csv
av2021/src/: TwentyFive.hs
av2022/: CHANGELOG.md  README.md  av2022.cabal  package.yaml  stack.yaml
av2022/app/: Main.hs
av2022/src/: Lib.hs
av2022/src/A1/: Run.hs
av2022/src/Day10/: Run.hs
av2022/src/Day11/: Run.hs
av2022/src/Day12/: Run.hs
av2022/src/Day13/: Run.hs
av2022/src/Day14/: Run.hs
av2022/src/Day16/: Opti.hs  Run.hs
av2022/src/Day18/: Run.hs
av2022/src/Day2/: Run.hs
av2022/src/Day3/: Run.hs
av2022/src/Day4/: Run.hs
av2022/src/Day5/: Run.hs
av2022/src/Day7/: Run.hs
av2022/src/Day8/: Run.hs
av2022/src/Day9/: Run.hs
haskell/: haskell.cabal  package.yaml
haskell/app/: Main.hs
haskell/av2021/src/: four.hs
haskell/av2022/: README.md  av2022.cabal  package.yaml
haskell/av2022/app/: Main.hs
haskell/av2022/src/Day10/: Run.hs
haskell/av2022/src/Day17/: Run.hs
haskell/av2022/src/Day19/: Run.hs
haskell/av2022/src/Day2/: Run.hs
haskell/av2022/src/Day6/: Run.hs
haskell/src/: Lib.hs  Matrix.hs
haskell/src/Year21/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day22B.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day3B.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Three.hs  Twenty.hs
haskell/src/Year22/: Lib.hs
haskell/src/Year24/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day12.txt  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
rust/: Cargo.toml  LICENSE  aoc.ts
rust/src/: lib.rs  main.rs
rust/src/y22/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
rust/src/y23/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/: .Twenty.hs.swp  Eighteen.hs  Fifteen.hs  Nineteen.hs  Sixteen.hs  Twentythree.hs  fourteen.hs  nine.hs  one.hs  seven.hs  seven.py  ten.hs  three_bis.hs  twelve.hs
(+20 files in other folders)
